tests/fixtures/valid/expressions/tuple_declaration.pine
//@version=6
indicator("Tuple")
[basis, upper, lower] = ta.bb(close, 20, 2)
plot(basis)
