tests/fixtures/invalid/semantic/history_on_literal.pine
//@version=6
indicator("x")
x = 1[2]
